a1/brendan_gordon/TEST_PROGRAMS/invalidtype/luke_emery-fertitta/while.min
# non-int in while expression

var x : float;
x = 3; # this is fine, we allow assignment of int to float

while x do
	print "this should not be reached.";
done
